--- a/src/Stylesheet/Navbar.css
+++ b/src/Stylesheet/Navbar.css
@@ -64,7 +64,7 @@ p{
     font-size: medium; 
 }
 /* utility classes */
-.container{
+.container-div{
     max-width: 1180px;
     margin-inline: auto;
     padding-inline: var(--padding-inline-section);
